fix: navbar overflow width in production 2

--- a/styles/core.css
+++ b/styles/core.css
@@ -16,6 +16,7 @@ html {
 
 body {
    transition:all 0.5s ease-in;
+   overflow-x: hidden;
 }
 
 body.dark {
